# rust-gfx-playground

./: Cargo.toml  README.md  install.sh  obj.vert  shader.frag  shader.vert  video.frag
shaders/: obj.frag  particle.frag  particle.vert  video.frag
src/: augment.rs  main.rs  old.rs  particles.rs  render_gl.rs  render_teapot.rs  shadertoy.rs
src/augment/: shaders.rs  video.rs
src/augment/filters/: mod.rs  utils.rs
